--- a/app/src/main/res/layout/customer_fragment_provider.xml
+++ b/app/src/main/res/layout/customer_fragment_provider.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".customer.ui.CustomerProviderFragment">
-
 
     <LinearLayout
         android:id="@+id/linear_layout"
@@ -13,47 +11,47 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-    <RelativeLayout
-        android:id="@+id/relLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_weight="1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/round_corner"
-        android:elevation="10dp"
-        android:paddingStart="15dp">
+        <RelativeLayout
+            android:id="@+id/relLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/round_corner"
+            android:elevation="10dp"
+            android:paddingStart="15dp">
 
-        <ImageView
-            android:id="@+id/ivSearch"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="15dp"
-            android:src="@drawable/magnify" />
+            <ImageView
+                android:id="@+id/ivSearch"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="15dp"
+                android:src="@drawable/magnify" />
 
-        <AutoCompleteTextView
-            android:id="@+id/etSearch"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/ivSearch"
-            android:background="@null"
-            android:hint="Search Order Here"
-            android:imeOptions="actionSearch"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+            <AutoCompleteTextView
+                android:id="@+id/etSearch"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/ivSearch"
+                android:background="@null"
+                android:hint="Search Order Here"
+                android:imeOptions="actionSearch"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
-    </RelativeLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_weight="3.5"
             android:layout_gravity="center"
+            android:layout_weight="3.5"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
@@ -62,152 +60,41 @@
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/filter2"/>
+                android:src="@drawable/filter2" />
 
 
         </LinearLayout>
-
 
 
     </LinearLayout>
 
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/linear_layout">
 
-
         <LinearLayout
+            android:id="@+id/llData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
+            <include layout="@layout/customer_provider_layout" />
 
+            <include layout="@layout/customer_provider_layout" />
 
-            <LinearLayout
-                android:id="@+id/linear_layout_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:orientation="vertical">
+            <include layout="@layout/customer_provider_layout" />
 
+            <include layout="@layout/customer_provider_layout" />
 
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_margin="5dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Apple Bazar"
-                                    android:textColor="@color/green"
-                                    android:textSize="19dp"
-                                    android:fontFamily="@font/poppins_semibold"
-                                    android:padding="10dp"/>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="end"
-                                android:layout_weight="2">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Available"
-                                    android:padding="10dp"
-                                    android:background="@color/green"
-                                    android:textColor="@color/white"
-                                    android:fontFamily="@font/poppins_semibold"/>
-                            </LinearLayout>
-                        </LinearLayout>
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@color/light_green"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                android:layout_marginRight="2dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/poppins_semibold"
-                                    android:text="Location :"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/poppins_semibold"
-                                    android:layout_marginLeft="5dp"
-                                    android:text="nashik"/>
-
-
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@color/light_green"
-                                android:layout_weight="1.2"
-                                android:padding="10dp"
-                                android:layout_marginLeft="2dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/poppins_semibold"
-                                    android:text="Date/Time : 12pm"/>
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
+            <include layout="@layout/customer_provider_layout" />
 
         </LinearLayout>
 
-     </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </RelativeLayout>
